CLOSED - # 594: deutsche internationalisierung https://dev.bjoernsen.de/nofdp/ticket/594